help: scrollbar bugfix; Summary: Upcoming Deadline date bugfix

--- a/styles/board-task-form.css
+++ b/styles/board-task-form.css
@@ -206,7 +206,7 @@
 
 .edit-task-form .subtask {
     height: 40px;
-    width: 100%;
+    width: auto;
     min-width: 0;
     margin-left: 10px;
     margin-bottom: 4px;
