--- a/styles/header.css
+++ b/styles/header.css
@@ -103,7 +103,7 @@ header {
 
 .profile-menu.active a,
 .profile-menu.active button {
-    width: 70%;
+    width: 73%;
 }
 
 .profile-menu-item-container {
